--- a/examples/pulumi_dotnet/pulumi_dotnet.csproj
+++ b/examples/pulumi_dotnet/pulumi_dotnet.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net9.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Pulumi"
+      Version="3.*" />
     <ProjectReference Include="..\..\provider\pulumi\sdk\dotnet\Pulumi.Cape.csproj" />
   </ItemGroup>
 
