chore(provider/pulumi): move mod to own dir

--- a/mockserver/Dockerfile
+++ b/mockserver/Dockerfile
@@ -11,10 +11,17 @@ RUN CGO_ENABLED=0 go build -o /app/bin/mockserver
 FROM gcr.io/distroless/static-debian12
 
 ARG COMMIT_SHA=local
-LABEL org.opencontainers.image.source="https://github.com/cape-project-eu/cape-sdk-generator/blob/${COMMIT_SHA}/mockserver/Dockerfile" \
-    org.opencontainers.image.authors="University of St. Gallen" \
-    org.opencontainers.image.revision="${COMMIT_SHA}" \
-    org.opencontainers.image.title="CAPE API Mockserver"
+ARG BUILD_DATE="0000-00-00T00:00:00Z"
+ARG VERSION="0.0.0-dev"
+
+LABEL org.opencontainers.image.title="CAPE API Mockserver"
+LABEL org.opencontainers.image.description="A mockserver implementation that allows testing against the SecAPI implementation of CAPE."
+LABEL org.opencontainers.image.authors="University of St. Gallen"
+LABEL org.opencontainers.image.source="https://github.com/cape-project-eu/cape-sdk-generator/blob/${COMMIT_SHA}/mockserver/Dockerfile"
+LABEL org.opencontainers.image.revision="${COMMIT_SHA}"
+LABEL org.opencontainers.image.version="${VERSION}"
+LABEL org.opencontainers.image.created="${BUILD_DATE}"
+LABEL org.opencontainers.image.base.name="gcr.io/distroless/static-debian12"
 
 ENV GIN_MODE=release
 COPY --from=build /app/bin/mockserver /
